homeworks/artemkolbasa/lesson-08/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - port: 8080
      targetPort: 8080
