homeworks/artemkolbasa/lesson-08/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
spec:
  tls:
  - hosts:
    - course-app.local
    secretName: course-app-tls
  rules:
  - host: course-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: course-app
            port:
              number: 8080
